# pydeb-bench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
binder/: postBuild
debcompare/: __init__.py  __main__.py  benchmark.py  cli.py  data.py  metrics.py  plotting.py
notebooks/: 01_quickstart.py  binder_demo.ipynb
scripts/: compare_with_r.py  run_benchmark.py
src/pydeb/: __init__.py
src/pydeb/bayes/: __init__.py  diagnostics.py  models.py
src/pydeb/core/: __init__.py  model.py  params.py  temperature.py
src/pydeb/ml/: __init__.py  baselines.py
src/pydeb/plots/: __init__.py  bayesian.py  comparison.py  mechanistic.py  style.py
tests/: test_benchmark_smoke.py  test_classical_fit.py  test_core_model.py  test_metrics.py  test_plots.py
