[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydeb-bench"
version = "0.1.0"
description = "Python tools for Dynamic Energy Budget modelling: forward model (pydeb), turnkey Bayesian DEB (pydeb.bayes), and a reproducible benchmark harness (debcompare) accompanying the Hackenberger & Djerdj (2026) review in Ecological Modelling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Branimir K. Hackenberger", email = "hackenbergerb@gmail.com"},
]
keywords = ["DEB", "Bayesian", "ecotoxicology", "TKTD", "metabolic modelling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pymc>=5.10",
    "arviz>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
notebook = [
    "jupyter",
    "ipykernel",
    "seaborn",
]

[project.scripts]
debcompare = "debcompare.cli:main"

[project.urls]
"Source" = "https://github.com/sciom/pydeb-bench"
"Paper" = "https://doi.org/10.1016/j.ecolmodel.XXXX"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pydeb*", "debcompare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py310"
